# sentinel-agent

./: .dockerignore  .env  .env.example  .env.production  .eslintrc.js  .eslintrc.json  .firebaserc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rustc_info.json  ACTIONS_PRIORITAIRES_TERMINEES.md  ALL_LINKS_COMPLETE.md  AMELIORATIONS_APPLIQUEES.md  ANALYSE_PAGES.md  ANALYSE_STYLE_UX.md  APPLE_STORE_DEPLOYMENT.md  APP_STORE_CHECKLIST.md  APP_STORE_CONNECT_GUIDE.md  APP_STORE_METADATA.md  AUDIT_COMPLETION_REPORT.md  AUDIT_COMPLET_SENTINEL.md  AUDIT_COMPLET_SENTINEL_V2.md  AUDIT_COMPLET_V2.md  AUDIT_PRODUCTION_LOGS.md  AUDIT_REPORT.md  AUDIT_UI_UX_COMPLET.md  App.tsx  BMAD_ANALYSIS.md  BUILD_CONFIG.md  BUILD_DEPLOYMENT.md  BUILD_STATUS.md  BUILD_UPLOAD_COMPLETE.md  BUTTONS_VERIFICATION.md  CHANGELOG.md  CHECKLIST_PRODUCTION.md  CLAUDE.md  CLIENT_DEPLOYMENT.md  CODE_OF_CONDUCT.md  COMPLETE_IMPROVEMENTS_REPORT.md  (+246 more)
crates/agent-common/: Cargo.toml  README.md  agent-common.cdx.json  bom.json
crates/agent-common/src/: config.rs  constants.rs  error.rs  jwt.rs  lib.rs  macos.rs  process.rs  sensitive_filter.rs
crates/agent-common/src/frameworks/: anssi.rs  cis_v8.rs  iso27001.rs  mod.rs  nist_csf.rs  pci_dss.rs
crates/agent-common/src/types/: agent.rs  check.rs  event.rs  fim.rs  mod.rs  proof.rs  remediation.rs  update.rs  usb.rs
crates/agent-common/tests/: integration_test.rs
crates/agent-core/: Cargo.toml  Cargo.toml.bak  README.md  agent-core.cdx.json  bom.json  build.rs
crates/agent-core/debian/: postinst  postrm  preinst  prerm  sentinel-agent.service
crates/agent-core/src/: api_client.rs  asset_sync.rs  audit_trail.rs  cleanup.rs  compliance.rs  edr_actions.rs  enrollment.rs  events.rs  gui_bridge.rs  heartbeat.rs  lib.rs  lib.rs.bak  llm_service.rs  logging.rs  main.rs  mdm.rs  network_ops.rs  playbook_engine.rs  remediation_ops.rs  resources.rs  risk_generation.rs  scanning.rs  self_protection.rs  self_update.rs  siem_enrichment.rs  sounds.rs  state.rs  sync_converters.rs  sync_init.rs  system_utils.rs  threat_pipeline.rs  tracing_layer.rs  tray.rs  update_manager.rs  voice.rs
crates/agent-core/src/service/: mod.rs  unix.rs  windows.rs
crates/agent-core/tests/: framework_coherence.rs
crates/agent-fim/: Cargo.toml  README.md  agent-fim.cdx.json  bom.json
crates/agent-fim/src/: alerts.rs  baseline.rs  lib.rs  policy.rs  watcher.rs
crates/agent-fim/tests/: integration_test.rs
crates/agent-gui/: Cargo.toml  Cargo.toml.bak  README.md  agent-gui.cdx.json  bom.json  build.rs
crates/agent-gui/assets/fonts/: LICENSE-FONTAWESOME.txt
crates/agent-gui/examples/: gui_demo.rs
crates/agent-gui/src/: animation.rs  app.rs  app.rs.bak  dto.rs  enrollment.rs  events.rs  export.rs  icons.rs  lib.rs  llm_panel.rs  llm_panel.rs.bak  main.rs  os_settings.rs  state.rs  theme.rs  tray_bridge.rs
crates/agent-gui/src/os/: macos.rs  mod.rs  windows.rs
crates/agent-gui/src/pages/: about.rs  assets.rs  audit_trail.rs  cartography.rs  compliance.rs  dashboard.rs  dashboard.rs.bak  discovery.rs  fim.rs  logs.rs  mod.rs  monitoring.rs  network.rs  notifications.rs  reports.rs  risks.rs  settings.rs  software.rs  sync.rs  terminal.rs  threats.rs  vulnerabilities.rs
crates/agent-gui/src/widgets/: activity_feed.rs  alert.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  command_palette.rs  compliance_gauge.rs  copy_button.rs  data_table.rs  detail_drawer.rs  divider.rs  dropdown.rs  empty_state.rs  header.rs  help_info.rs  layout.rs  loading_state.rs  mod.rs  modal.rs  org_banner.rs  pagination.rs  premium_badge.rs  progress.rs  protected_state.rs  resource_bar.rs  search_filter_bar.rs  security_hero.rs  sentinel_ai_core.rs  sidebar.rs  sidebar.rs.bak  skeleton.rs  slider.rs  sparkline.rs  status_badge.rs  tabs.rs  text_input.rs  toast.rs  (+5 more)
crates/agent-network/: Cargo.toml  README.md  agent-network.cdx.json  bom.json
crates/agent-network/src/: error.rs  lib.rs  types.rs
crates/agent-network/src/collector/: connections.rs  dns.rs  interfaces.rs  mod.rs  routes.rs
crates/agent-network/src/detection/: beaconing_detector.rs  c2_detector.rs  dga_detector.rs  mod.rs  (+4 more)
crates/agent-network/tests/: integration_test.rs
crates/agent-persistence/: Cargo.toml  README.md  agent-persistence.cdx.json  bom.json
crates/agent-persistence/src/: backup.rs  cleanup.rs  error.rs  key_rotation.rs  lib.rs  migration.rs  migration_v2.rs  recovery.rs
crates/agent-persistence/tests/: integration_test.rs
crates/agent-scanner/: Cargo.toml  README.md  agent-scanner.cdx.json  bom.json  compile_errors.txt
crates/agent-scanner/src/: check.rs  error.rs  lib.rs  llm_integration.rs  mdm_software.rs  proof.rs  remediation.rs  runner.rs  scheduler.rs  score.rs
crates/agent-scanner/tests/: integration_test.rs
crates/agent-siem/: Cargo.toml  README.md
crates/agent-siem/src/: collector.rs  correlation.rs  error.rs  lib.rs
crates/agent-siem/tests/: integration_test.rs
crates/agent-storage/: Cargo.toml  README.md  agent-storage.cdx.json  bom.json
crates/agent-storage/examples/: diag.rs  diag_results.rs
crates/agent-storage/src/: database.rs  error.rs  key.rs  lib.rs  migrations.rs  retention.rs
crates/agent-storage/tests/: integration_test.rs
crates/agent-sync/: Cargo.toml  README.md  agent-sync.cdx.json  bom.json
crates/agent-sync/src/: audit_sync.rs  authenticated_client.rs  client.rs  command_results.rs  config_sync.rs  credentials.rs  diagnostics.rs  enrollment.rs  error.rs  heartbeat.rs  integrity.rs  lib.rs  offline.rs  orchestrator.rs  pinning.rs  result_upload.rs  rollout.rs  rules.rs  security.rs  types.rs  update.rs  updater.rs
crates/agent-sync/tests/: integration_test.rs
crates/agent-system/: Cargo.toml  agent-system.cdx.json  bom.json
crates/agent-system/src/: lib.rs
crates/agent_llm/: Cargo.toml  Cargo.toml.bak  README.md
crates/agent_llm/src/: analyzer.rs  analyzer_fixed.rs  config.rs  engine.rs  lib.rs  lib_broken.rs  lib_minimal.rs  lib_optimized.rs  lib_simple.rs  models.rs  prompts.rs  remediation.rs  security.rs  utils.rs
(+6250 files in other folders)
