[workspace]
resolver = "3"
members = [
     "crates/*",
     "xtask",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "Proprietary"
repository = "https://github.com/sentinel/agent"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.37", features = ["bundled-sqlcipher"] }
tokio-rusqlite = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
config = "0.15"
directories = "6"
url = "2"
tempfile = "3"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
sysinfo = "0.35"
async-trait = "0.1"
semver = { version = "1", features = ["serde"] }
hmac = "0.12"
tray-icon = "0.19"
muda = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"
tao = { version = "0.30", default-features = false, features = ["rwh_06"] }
hostname = "0.4"
rand = "0.9"
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
egui_plot = "0.31"
notify = { version = "7", features = ["macos_fsevent"] }
rayon = "1.10"
battery = "0.7"
usb_enumeration = "0.2"
walkdir = "2"
blake3 = "1"
memmap2 = "0.9"
regex = "1"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
getrandom = "0.2"
os_info = "3"
flate2 = "1.0"

[workspace.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
]

[workspace.dependencies.windows-service]
version = "0.7"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true
debug = false
