[package]
name = "agent-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono.workspace = true
uuid.workspace = true
config.workspace = true
directories.workspace = true
url.workspace = true
sha2.workspace = true
hex.workspace = true
blake3.workspace = true
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
