[package]
name = "agent-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true
directories.workspace = true
url.workspace = true
sha2.workspace = true
hex.workspace = true
blake3.workspace = true
regex.workspace = true
once_cell.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
