[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Sentinel GRC endpoint compliance monitoring agent"

[features]
default = ["tray"]
# Enable system tray GUI (macOS/Windows desktop mode)
tray = ["dep:tray-icon", "dep:muda", "dep:image", "dep:open", "dep:tao"]
# Enable v2 desktop GUI features
gui = ["dep:agent-gui"]
# LLM features (not yet active)
llm = []
llm_simple = []

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
base64.workspace = true
agent-common = { path = "../agent-common" }
agent-storage = { path = "../agent-storage" }
agent-sync = { path = "../agent-sync" }
agent-scanner = { path = "../agent-scanner" }
agent-network = { path = "../agent-network" }
agent-gui = { path = "../agent-gui", optional = true }

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
rusqlite = { workspace = true }
tokio-rusqlite.workspace = true

tracing-subscriber = { workspace = true }
config.workspace = true
directories.workspace = true
url.workspace = true
tempfile.workspace = true
sha2.workspace = true
hex.workspace = true
clap = { workspace = true }
signal-hook.workspace = true
sysinfo.workspace = true
async-trait.workspace = true
semver = { workspace = true }
hmac.workspace = true
tray-icon = { workspace = true, optional = true }
muda = { workspace = true, optional = true }
image = { workspace = true, default-features = false, features = ["png"], optional = true }
open = { workspace = true, optional = true }
tao = { workspace = true, default-features = false, features = ["rwh_06"], optional = true }
hostname.workspace = true
rand.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras = { workspace = true }
egui_plot.workspace = true
notify = { workspace = true }
rayon.workspace = true
battery.workspace = true
usb_enumeration.workspace = true
walkdir.workspace = true
blake3.workspace = true
memmap2.workspace = true
regex.workspace = true
zeroize = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
