[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Sentinel GRC endpoint compliance monitoring agent"

[features]
default = ["tray"]
# Enable system tray GUI (macOS/Windows desktop mode)
tray = ["dep:tray-icon", "dep:muda", "dep:image", "dep:open", "dep:tao"]
# Enable v2 desktop GUI features (includes LLM AI module + persistence)
gui = ["dep:agent-gui", "dep:agent-persistence", "llm", "agent-gui/llm", "dep:eframe", "dep:egui", "dep:egui_extras", "dep:egui_plot"]
# LLM features (can also be enabled standalone without GUI)
llm = ["dep:agent_llm", "agent-scanner/llm"]
llm_simple = []

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
base64.workspace = true
agent-common = { path = "../agent-common" }
agent-storage = { path = "../agent-storage" }
agent-sync = { path = "../agent-sync" }
agent-scanner = { path = "../agent-scanner", features = ["osv"] }
agent-network = { path = "../agent-network" }
agent-fim = { path = "../agent-fim" }
agent-siem = { path = "../agent-siem" }
agent-gui = { path = "../agent-gui", optional = true }
agent_llm = { path = "../agent_llm", optional = true }
agent-persistence = { path = "../agent-persistence", optional = true }

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
rusqlite = { workspace = true }
tokio-rusqlite.workspace = true

tracing-subscriber = { workspace = true }
config.workspace = true
directories.workspace = true
url.workspace = true
tempfile.workspace = true
sha2.workspace = true
hex.workspace = true
clap = { workspace = true }
signal-hook.workspace = true
sysinfo.workspace = true
async-trait.workspace = true
semver = { workspace = true }
hmac.workspace = true
tray-icon = { workspace = true, optional = true }
muda = { workspace = true, optional = true }
image = { workspace = true, default-features = false, features = ["png"], optional = true }
open = { workspace = true, optional = true }
tao = { workspace = true, default-features = false, features = ["rwh_06"], optional = true }
hostname.workspace = true
rand.workspace = true
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }
notify = { workspace = true }
rayon.workspace = true
battery.workspace = true
usb_enumeration.workspace = true
walkdir.workspace = true
blake3.workspace = true
memmap2.workspace = true
regex.workspace = true
zeroize = { workspace = true }
futures-util.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
windows-service = { workspace = true }
openssl = { workspace = true, features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[package.metadata.generate-rpm]
name = "sentinel-agent"
assets = [
    { source = "../../target/release/agent-core", dest = "/usr/bin/sentinel-agent", mode = "755" },
    { source = "debian/sentinel-agent.service", dest = "/lib/systemd/system/sentinel-agent.service", mode = "644" },
    { source = "../../linux/logrotate/sentinel-agent", dest = "/etc/logrotate.d/sentinel-agent", mode = "644" },
    { source = "../../linux/apparmor/sentinel-agent", dest = "/etc/apparmor.d/usr.bin.sentinel-agent", mode = "644" },
    { source = "../../config/agent.example.json", dest = "/etc/sentinel/agent.example.json", mode = "644" },
    { source = "../../config/llm.example.json", dest = "/etc/sentinel/llm.example.json", mode = "644" },
]
pre_install_script = "debian/preinst"
post_install_script = "debian/postinst"
pre_uninstall_script = "debian/prerm"
post_uninstall_script = "debian/postrm"

[package.metadata.deb]
name = "sentinel-agent"
maintainer = "Sentinel GRC Team <support@sentinel-grc.com>"
copyright = "2025, Sentinel GRC Team"
license-file = ["../../LICENSE", "4"]
extended-description = """\
Sentinel GRC endpoint compliance monitoring agent.
Provides real-time asset scanning, risk assessment, and compliance monitoring
for enterprise environments following ISO 27001/27005 standards."""
depends = "libssl3, libgtk-3-0, libayatana-appindicator3-1"
section = "admin"
priority = "optional"
conf-files = ["/etc/sentinel/agent.json"]
maintainer-scripts = "debian/"
assets = [
    ["target/release/agent-core", "usr/bin/sentinel-agent", "755"],
    ["debian/sentinel-agent.service", "lib/systemd/system/sentinel-agent.service", "644"],
    ["../../linux/logrotate/sentinel-agent", "etc/logrotate.d/sentinel-agent", "644"],
    ["../../linux/apparmor/sentinel-agent", "etc/apparmor.d/usr.bin.sentinel-agent", "644"],
    ["../../config/agent.example.json", "etc/sentinel/agent.example.json", "644"],
    ["../../config/llm.example.json", "etc/sentinel/llm.example.json", "644"],
    ["../../README.md", "usr/share/doc/sentinel-agent/README.md", "644"],
    ["../../LICENSE", "usr/share/doc/sentinel-agent/LICENSE", "644"],
]
