[package]
name = "agent-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Desktop GUI for the Sentinel GRC Agent using egui/eframe"

[features]
default = ["render"]
# Enable egui rendering (disable for DTO-only usage)
render = ["dep:eframe", "dep:egui", "dep:egui_extras", "dep:image", "dep:open", "dep:tray-icon", "dep:muda", "dep:tao", "dep:tracing", "dep:tokio", "dep:directories", "dep:hostname"]

[dependencies]
agent-common = { path = "../agent-common" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
image = { workspace = true, optional = true }
open = { workspace = true, optional = true }
tray-icon = { workspace = true, optional = true }
muda = { workspace = true, optional = true }
tao = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
hostname = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
