[package]
name = "agent-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Desktop GUI for the Sentinel GRC Agent using egui/eframe"

[features]
default = ["render"]
# Enable egui rendering (disable for DTO-only usage)
render = ["dep:eframe", "dep:egui", "dep:egui_extras", "dep:egui_plot", "dep:image", "dep:open", "dep:tray-icon", "dep:muda", "dep:tao", "dep:tracing", "dep:tokio", "dep:directories", "dep:hostname"]
# Enable LLM integration in GUI
llm_simple = ["dep:agent_llm"]
llm = ["dep:agent_llm"]

[dependencies]
agent-common = { path = "../agent-common" }
agent_llm = { path = "../agent_llm", optional = true }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
regex.workspace = true
once_cell.workspace = true
uuid.workspace = true
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }
image = { workspace = true, optional = true }
open = { workspace = true, optional = true }
tray-icon = { workspace = true, optional = true }
muda = { workspace = true, optional = true }
tao = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
hostname = { workspace = true, optional = true }
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
