[package]
name = "agent-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-common = { path = "../agent-common" }
agent-system = { path = "../agent-system" }
async-trait.workspace = true
chrono.workspace = true
dirs = "5"
hex.workspace = true
hmac = "0.12"
regex = "1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
walkdir.workspace = true
blake3.workspace = true
rayon.workspace = true
sysinfo.workspace = true
memmap2.workspace = true

[features]
default = []
llm_simple = []

[dev-dependencies]
tempfile.workspace = true
