[package]
name = "agent-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-common = { path = "../agent-common" }
agent_llm = { path = "../agent_llm", optional = true }
async-trait.workspace = true
chrono.workspace = true
directories.workspace = true
hex.workspace = true
hmac.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
walkdir.workspace = true
blake3.workspace = true
rayon.workspace = true
sysinfo.workspace = true
memmap2.workspace = true
anyhow = { workspace = true, optional = true }

[features]
default = []
llm_simple = ["dep:anyhow"]
llm = ["dep:agent_llm", "dep:anyhow"]

[dev-dependencies]
tempfile.workspace = true
