[package]
name = "agent-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
test-utils = []

[dependencies]
agent-common = { path = "../agent-common" }
rusqlite.workspace = true
tokio-rusqlite.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
getrandom = "0.2"

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
