[package]
name = "agent-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-common = { path = "../agent-common" }
agent-storage = { path = "../agent-storage" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
hostname.workspace = true
os_info.workspace = true
sysinfo.workspace = true
sha2.workspace = true
hex.workspace = true
flate2.workspace = true
semver.workspace = true
hmac.workspace = true
zeroize.workspace = true
futures-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
agent-storage = { path = "../agent-storage", features = ["test-utils"] }
