[package]
name = "agent-system"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-common = { path = "../agent-common" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
