[package]
name = "agent_llm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Local LLM inference for intelligent security analysis"

[lib]
name = "agent_llm"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
regex.workspace = true
async-trait.workspace = true
num_cpus = "1.0"
mistralrs = { version = "0.7.0", features = ["accelerate"] }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }

[features]
default = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
