[package]
name = "agent_llm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Local LLM inference for intelligent security analysis"

[lib]
name = "agent_llm"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
regex.workspace = true
sha2.workspace = true
async-trait.workspace = true
mistralrs = { version = "0.7.0" }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
mistralrs = { version = "0.7.0", features = ["accelerate"] }

[features]
default = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
tempfile.workspace = true
